# computational_intelligence

./: .gitignore  README.md  pyproject.toml
.spyproject/config/: workspace.ini
lab1/: README.md  lab1.py
lab2/: README.md  hyperparameters.py  lab2.py  phases.py  utilities.py
lab3/: README.md  game_utilities.py  lab3.py  main.py  utilities.py
lab3/strategies/: evolution.py  evolving_agents.py  fixed_rules.py  min_max.py  reinforcement.py  strategy_utilities.py  utilities.py
