[tool.poetry]
name = "computational-intelligence-labs"
version = "0.1.0"
description = "dependencies"
authors = ["Christian Dal Pozzolo <s303406@studenti.polito.it>"]
readme = "README.md"
packages = [{include = "computational_intelligence_labs"}]

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
collection = "^0.1.6"
numpy = "^1.23.4"
gx = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
